# clean_architecture

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: database.py
src/core/auth/: auth_handler.py  helpers.py
src/core/handlers/: exceptions.py  middleware.py
src/entrypoints/api/: dependencies.py  main.py
src/entrypoints/api/admin/: exceptions.py  models.py  responses.py  routes.py
src/entrypoints/api/handlers/: exceptions.py  middleware.py
src/entrypoints/api/mappers/: admin_mapper.py  user_mapper.py
src/entrypoints/api/user/: exceptions.py  models.py  responses.py  routes.py
src/entrypoints/cli/: dbsetup.py  superuser.py
src/modules/application/: admin_services.py  user_services.py
src/modules/application/admin/: admin_services.py  exceptions.py  services.py
src/modules/application/user/: exceptions.py  services.py  user_services.py
src/modules/domain/admin/: entity.py  exceptions.py  repository.py
src/modules/domain/user/: entity.py  repository.py
src/modules/infrastructure/auth/: auth_bearer.py  auth_handler.py  helpers.py  password_utils.py
src/modules/infrastructure/persistence/: database.py  settings.py
src/modules/infrastructure/persistence/dbschemas/: admin.py  user.py
src/modules/infrastructure/repositories/postgres/: admin_repository.py  user_repository.py
