[project]
name = "bank-sys-cleanarch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "palpasa4", email = "palpasa04@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "sqlalchemy>=2.0.40",
    "pydantic-settings>=2.9.1",
    "psycopg2-binary>=2.9.10",
    "bcrypt>=4.3.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bank_sys_cleanarch"]

[tool.rye.scripts]
server="fastapi dev src/entrypoints/api/main.py"
create-superuser = "python ./src/entrypoints/cli/superuser.py"
database-setup = "python src/entrypoints/cli/dbsetup.py"
